--- a/index.html
+++ b/index.html
@@ -1,30 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Interactive Shopping List</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Interactive Shopping List</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="container">
-    <header>
-      <h1>Shopping List</h1>
-      <p>Keep track of what you need to buy!</p>
-    </header>
-    <main>
-      <div class="input-area">
-        <input type="text" id="item-input" placeholder="Enter an item..." />
-        <button id="add-btn">Add</button>
-      </div>
-      <ul id="shopping-list">
-        <!-- Items will be dynamically added here -->
-      </ul>
-      <div class="actions">
-        <button id="clear-btn">Clear List</button>
-      </div>
-    </main>
-  </div>
-  <script src="script.js"></script>
+    <div class="container">
+        <h1>Shopping List</h1>
+        <div class="input-group">
+            <input type="text" id="itemInput" placeholder="Enter shopping item">
+            <button id="addBtn" class="add-btn">Add</button>
+        </div>
+        <ul id="shoppingList"></ul>
+        <div class="buttons">
+            <button id="clearBtn" class="clear-btn">Clear List</button>
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
